[gd_scene load_steps=3 format=3 uid="uid://cbbkfoixcjuka"]

[ext_resource type="Script" path="res://scenes/menus/menu_ui.gd" id="1_x2fdc"]
[ext_resource type="Theme" uid="uid://ikks65y6tq6k" path="res://assets/main_theme.tres" id="2_axeig"]

[node name="MenuUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_x2fdc")

[node name="ScoreLabels" type="MarginContainer" parent="."]
modulate = Color(0, 0, 0, 0.439216)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_axeig")

[node name="VBoxContainer" type="VBoxContainer" parent="ScoreLabels"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScoreLabels/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ScoreName" type="Label" parent="ScoreLabels/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score:"

[node name="ScoreValue" type="Label" parent="ScoreLabels/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 32
text = "99999999"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScoreLabels/VBoxContainer"]
layout_mode = 2

[node name="TimeName" type="Label" parent="ScoreLabels/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Time"

[node name="TimeValue" type="Label" parent="ScoreLabels/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "365:24:60:60.999"
horizontal_alignment = 2

[node name="PauseMenu" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_axeig")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 2
color = Color(0.188235, 0.188235, 0.188235, 0.52549)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Retry" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="EndText" type="Label" parent="PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="PauseMenu/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
